--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "Zhang Hongchuan",
   "license": "MIT",
   "dependencies": {
-    "electron": "^2.0.2"
+    "electron": "^2.0.2",
+    "express": "^4.16.3",
+    "nedb": "^1.8.0",
+    "ssh2": "^0.6.1"
   }
 }
