--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
   "license": "MIT",
   "dependencies": {
     "electron": "^2.0.2",
-    "express": "^4.16.3",
-    "nedb": "^1.8.0",
-    "ssh2": "^0.6.1"
+    "jquery": "^3.3.1"
   }
 }
